syntax = "proto3";

package multiboardProto;

import "google/protobuf/timestamp.proto";

service MultiBoard {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc Stream(stream StreamRequest) returns (stream StreamResponse) {}
}

message LoginRequest {
    string password = 1;
    string name     = 2;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {}

message Pixel {
    float x = 2;
    float y = 3;
    float colorR = 5;
    float colorG = 6;
    float colorB = 7;
    float alpha = 8;
}

message StreamRequest {
    google.protobuf.Timestamp timestamp = 1;
    oneof event {
        Refresh server_refresh = 2;
        Draw server_draw = 3;
    }
    message Draw {
        Pixel pixel = 1;
    }
    message Refresh {
        repeated Pixel screen = 1;
    }

}

message StreamResponse {
    google.protobuf.Timestamp timestamp = 1;

    oneof event {
        Login    client_login    = 2;
        Logout   client_logout   = 3;
        Message  client_message  = 4;
        Shutdown server_shutdown = 5;
    }

    message Login {
        string name = 1;
    }

    message Logout {
        string name = 1;
    }

    message Message {
        string name = 1;
        Pixel pixel = 2;
    }

    message Shutdown {}
}